--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "library to render native desktop applications using vue js",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no tests provided\" && exit 1",
     "lint": "eslint --ext ts .",
     "build": "tsc --noEmit"
   },
